<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".component.settings.SettingFragment">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title" />

    <Button
        android:id="@+id/menu_about"
        style="@style/SettingButton"
        android:text="@string/about_title"
        app:backgroundTint="@color/yellow"
        app:backgroundTintMode="multiply" />

    <Button
        android:id="@+id/menu_user_manual"
        style="@style/SettingButton"
        android:text="@string/user_manual_title"
        app:backgroundTint="@color/red"
        app:backgroundTintMode="multiply" />

    <Button
        android:id="@+id/menu_profile"
        style="@style/SettingButton"
        android:text="@string/user_title"
        app:backgroundTint="@color/blue"
        app:backgroundTintMode="multiply" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            style="@style/ButtonDeco"
            android:src="@drawable/button_left" />

        <Button
            android:id="@+id/logout_btn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:text="@string/logout"
            app:backgroundTint="@color/gray"
            app:backgroundTintMode="multiply" />

        <ImageView
            style="@style/ButtonDeco"
            android:src="@drawable/button_right" />
    </LinearLayout>

</LinearLayout>