<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_timer"
        android:icon="@drawable/timer_icon"
        android:title="@string/timer_title" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/search_icon"
        android:title="@string/find_help_title" />
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/scan_icon"
        android:title="@string/scan_title" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/history_icon"
        android:title="@string/history_title" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/setting_icon"
        android:title="@string/setting_title" />
</menu>