<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_guideline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".component.settings.ethical_guideline.EthicalGuidelineFragment">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/user_manual_title" />

    <LinearLayout
        android:id="@+id/ellipses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/guideline_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_manual_title" />

</LinearLayout>